--- a/index.html
+++ b/index.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <title>My Awesome Company Contact Page</title>
-  </head>
-  <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Form</title>
+</head>
+<body>
 
-    <h1>Company Inc.</h1>
-    <h2>For all your incorporated company needs</h2>
+    <h1>Contact Us</h1>
 
-    <!-- First, create a form tag where our inputs will be nested -->
+    <form action="/submit-form" method="POST">
+        <!-- Full Name Input -->
+        <label for="fullname">Full Name:</label>
+        <input type="text" id="fullname" name="fullname" placeholder="Enter Name" required>
+        <br>
 
+        <!-- Email Input -->
+        <label for="email">Email Address:</label>
+        <input type="email" id="email" name="email" placeholder="Enter Email" required>
+        <br>
 
-      <!-- Add a label for 'fullname'-->
+        <!-- Telephone Input -->
+        <label for="phone">Phone Number (optional):</label>
+        <input type="tel" id="phone" name="telephone" placeholder="Enter Telephone (optional)">
+        <br>
 
-      <!-- Add a text input with the id and name attributes set to 'fullname' -->
-      <!-- Include the place holder text "Enter Name" and make this input required -->
+        <!-- Message Textarea -->
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" placeholder="Enter Message" required></textarea>
+        <br>
 
+        <!-- Checkbox -->
+        <label for="subscribe">
+            <input type="checkbox" id="subscribe" name="subscribe">
+            Subscribe to our newsletter
+        </label>
+        <br>
 
-      <!-- Add a label for 'email'-->
+        <!-- Submit Button -->
+        <button type="submit">Submit</button>
+    </form>
 
-      <!-- Add a email input with the id and name attributes set to 'email' -->
-      <!-- Include the place holder text "Enter Email" and make this input required -->
-
-
-      <!-- Add a label for 'phone'-->
-
-      <!-- Add a telephone input with the id and name attributes set to 'phone' -->
-      <!-- Include the place holder text "Enter Telephone (optional)" -->
-
-
-      <!-- Add a label for 'message'-->
-
-      <!-- Add a textarea tag with the id and name attributes set to 'message' -->
-      <!-- Include the place holder text "Enter Message" -->
-
-
-      <!-- Add a checkbox input with the id set to 'checkbox' -->
-
-
-
-      <!-- Add an input with the type set to 'submit' -->
-
-    
-  </body>
+</body>
 </html>
+
+
